# swagger-output.json
@@ -2082,6 +2082,70 @@
         }
       }
     },
+    "/api/messages/": {
+      "get": {
+        "tags": [
+          "Message"
+        ],
+        "summary": "Fetch all messages",
+        "description": "",
+        "parameters": [
+          {
+            "name": "conversationId",
+            "in": "query",
+            "description": "Conversation ID to fetch messages from",
+            "required": true,
+            "example": "69a8e3d5efdc9c0d269991dc",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "beforeId",
+            "in": "query",
+            "description": "Fetch messages older than this message ID (pagination cursor)",
+            "required": false,
+            "example": "699da49ae5596118b557aad0",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "description": "Maximum number of messages to return",
+            "required": false,
+            "default": 20,
+            "example": 20,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/api/messages/{messageId}": {
       "put": {
         "tags": [
